--- a/index.html
+++ b/index.html
@@ -20,22 +20,14 @@
     </div>
     <div class="form-control">
       <label for="multiplicador">Multiplicar até: </label>
-      <input type="number" name="multiplicador" id="multiplicador" value="10">
+      <input type="number" name="multiplicator" id="multiplicator" value="10">
     </div>
-    <input type="submit" value="calcular">
+    <input type="submit" value="Calcular">
   </form>
   <div id="multiplication-table">
-    <h2 id="multiplication-title">tabuada do número: <span></span></h2>
+    <h2 id="multiplication-title">Tabuada do número: <span></span></h2>
     <div id="multiplication-operations">
       <p>Informe um número para calcular uma tabuada...</p>
-      <div class="row">
-        <div class="operation">5 x 1 =</div>
-        <div class="result">5</div>
-      </div>
-      <div class="row">
-        <div class="operation">5 x 2 =</div>
-        <div class="result">10</div>
-      </div>
     </div>
   </div>
 </body>
